--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 streamlit
-pandas
-beautifulsoup4
-requests
-selenium
-chromedriver-autoinstaller
-tqdm
 openpyxl
+streamlit-authenticator
+streamlit-javascript
