--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ openpyxl
 streamlit-authenticator
 streamlit-javascript
 xlsxwriter
+pandas
+scikit-learn
+faiss-cpu
+langchain
+langchain-openai
+openai
